update api list

--- a/findDuplicate/index.html
+++ b/findDuplicate/index.html
@@ -68,7 +68,7 @@
                     Count: pathCount[key],
                     'Call From':'',
                     Comment: o.url,
-                    method: o.method,
+                    // method: o.method,
                     // ...o,
                 }
             });
